ZH-TW XML assets from LSO

--- a/l10n/ses/zh-tw/xml/common_intro_support.xml
+++ b/l10n/ses/zh-tw/xml/common_intro_support.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<sect1 xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="common_intro_support.xml" xml:lang="zh-tw" version="5.1">
+<sect1 xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="common_intro_support.xml" xml:lang="en" version="5.1">
  <title>支援</title>
 
  <info>
@@ -9,7 +9,7 @@
  </info>
 
  <para>
-  下面提供了 SUSE Enterprise Storage 的支援聲明和有關技術預覽的一般資訊。如需產品生命週期的詳細資料，請參閱<link xlink:href="https://www.suse.com/lifecycle"/>。
+  下面提供了 SUSE Enterprise Storage 的支援聲明和有關技術預覽的一般資訊。如需產品生命週期的詳細資料，請參閱 <link xlink:href="https://www.suse.com/lifecycle"/>。
  </para>
  <para>
   如果您有權獲享支援，可在 <link xlink:href="https://documentation.suse.com/sles-15/html/SLES-all/cha-adm-support.html"/> 中尋找有關如何收集支援票證所需資訊的詳細資料。
