--- a/l10n/ses/zh-tw/xml/dashboard_webui.xml
+++ b/l10n/ses/zh-tw/xml/dashboard_webui.xml
@@ -128,7 +128,7 @@
 
   <variablelist>
    <varlistentry>
-    <term><guimenu>狀態畫面</guimenu></term>
+    <term><guimenu>儀表板</guimenu></term>
     <listitem>
      <para>
       回到 Ceph Dashboard 首頁。
@@ -152,7 +152,7 @@
     </listitem>
    </varlistentry>
    <varlistentry>
-    <term><guimenu>阻擋</guimenu></term>
+    <term><guimenu>區塊</guimenu></term>
     <listitem>
      <para>
       檢視詳細資訊並管理 RADOS 區塊裝置影像、鏡像和 iSCSI。
@@ -173,7 +173,7 @@
     </listitem>
    </varlistentry>
    <varlistentry>
-    <term><guimenu>Filesystems</guimenu></term>
+    <term><guimenu>檔案系統</guimenu></term>
     <listitem>
      <para>
       檢視並管理 CephFS。
@@ -467,7 +467,7 @@
      <term><guimenu>整理</guimenu></term>
      <listitem>
       <para>
-       顯示整理 (參閱<xref linkend="op-pg-scrubpg"/>) 狀態。其狀態可以是 <option>inactive</option>、<option>enabled</option> 或 <option>active</option>。
+       顯示整理 (參閱<xref linkend="op-pg-scrubpg"/>) 狀態。其狀態可以是<option>非使用中</option>、<option>已啟用</option>或<option>使用中</option>。
       </para>
      </listitem>
     </varlistentry>
