--- a/l10n/ses/zh-tw/xml/upgrade-to-pacific.xml
+++ b/l10n/ses/zh-tw/xml/upgrade-to-pacific.xml
@@ -40,7 +40,7 @@
    <itemizedlist>
     <listitem>
      <para>
-      <emphasis>閱讀版本說明</emphasis>.在版本說明中，您可以找到更多有關自 SUSE Enterprise Storage 的上一個版本發行後所進行的變更的資訊。檢查版本說明以瞭解：
+      <emphasis>閱讀版本說明</emphasis>。在版本說明中，您可以找到更多有關自 SUSE Enterprise Storage 的上一個版本發行後所進行的變更的資訊。檢查版本說明以瞭解：
      </para>
      <itemizedlist>
       <listitem>
@@ -177,7 +177,7 @@
   <title>升級每個叢集節點上與 SUSE Enterprise Storage 相關的套件</title>
 
   <para>
-   若要將 SUSE Enterprise Storage 套件升級至最新版本，請使用 <command>ceph-salt update</command> 指令。如需詳細資訊，請參閱<xref linkend="cephadm-rolling-updates"/>。
+   若要將 SUSE Enterprise Storage 套件升級至最新版本，請使用 <command>ceph-salt update</command> 指令。如需詳細資訊，請參閱 <xref linkend="cephadm-rolling-updates"/>。
   </para>
  </sect1>
  <sect1 xml:id="upgrade-ses-services">
