--- a/l10n/ses/it-it/xml/deployment_hwrecommend.xml
+++ b/l10n/ses/it-it/xml/deployment_hwrecommend.xml
@@ -103,7 +103,7 @@
       <para>
        Riavviare gli OSD per eseguire l&apos;associazione alla rete di cluster specificata:
       </para>
-<screen><prompt role="root"># </prompt>systemctl restart ceph-*@osd&period;*&period;service</screen>
+<screen><prompt role="root"># </prompt>systemctl restart ceph-*@osd&#x002E;*&#x002E;service</screen>
      </step>
      <step>
       <para>
