--- a/l10n/ses/pt-br/xml/deployment_hwrecommend.xml
+++ b/l10n/ses/pt-br/xml/deployment_hwrecommend.xml
@@ -103,7 +103,7 @@
       <para>
        Reinicie os OSDs para vinculação à rede de cluster especificada:
       </para>
-<screen><prompt role="root"># </prompt>systemctl restart ceph-*@osd&period;*&period;service</screen>
+<screen><prompt role="root"># </prompt>systemctl restart ceph-*@osd&#x002E;*&#x002E;service</screen>
      </step>
      <step>
       <para>
