--- a/l10n/ses/zh-cn/xml/deployment_hwrecommend.xml
+++ b/l10n/ses/zh-cn/xml/deployment_hwrecommend.xml
@@ -103,7 +103,7 @@
       <para>
        重启动 OSD 以绑定到指定的集群网络：
       </para>
-<screen><prompt role="root"># </prompt>systemctl restart ceph-*@osd&period;*&period;service</screen>
+<screen><prompt role="root"># </prompt>systemctl restart ceph-*@osd&#x002E;*&#x002E;service</screen>
      </step>
      <step>
       <para>
