--- a/l10n/ses/fr-fr/xml/deployment_hwrecommend.xml
+++ b/l10n/ses/fr-fr/xml/deployment_hwrecommend.xml
@@ -103,7 +103,7 @@
       <para>
        Redémarrez les OSD pour qu&apos;ils se lient au réseau de grappe spécifié :
       </para>
-<screen><prompt role="root"># </prompt>systemctl restart ceph-*@osd&period;*&period;service</screen>
+<screen><prompt role="root"># </prompt>systemctl restart ceph-*@osd&#x002E;*&#x002E;service</screen>
      </step>
      <step>
       <para>
