fixed post LSO validation errors, examining all files, all langs

--- a/l10n/ses/ja-jp/xml/dashboard_webui.xml
+++ b/l10n/ses/ja-jp/xml/dashboard_webui.xml
@@ -243,25 +243,25 @@
   </para>
 
   <para>
-   <inlinemediaobject>の内部をクリックし、
+   <inlinemediaobject>
    <imageobject role="fo">
     <imagedata fileref="oa_widget_search.png" width="5em" format="PNG"/>
    </imageobject>
    <imageobject role="html">
     <imagedata fileref="oa_widget_search.png" width="5em" format="PNG"/>
    </imageobject>
-   </inlinemediaobject> 検索する文字列を入力して行をフィルタします。
+   </inlinemediaobject>の内部をクリックし、検索する文字列を入力して行をフィルタします。
   </para>
 
   <para>
-   <inlinemediaobject>の利用
+   の利用<inlinemediaobject>
    <imageobject role="fo">
     <imagedata fileref="oa_widget_pager.png" width="6em" format="PNG"/>
    </imageobject>
    <imageobject role="html">
     <imagedata fileref="oa_widget_pager.png" width="6em" format="PNG"/>
    </imageobject>
-   リストが複数のページにわたる場合は、</inlinemediaobject>を使用して、現在表示されているページを変更します。
+   </inlinemediaobject>リストが複数のページにわたる場合は、を使用して、現在表示されているページを変更します。
   </para>
  </sect1>
  <sect1 xml:id="dashboard-widgets">
