DE Admin, DTP2 edits - QA and LSO implemented

--- a/l10n/ses/de-de/xml/admin_ceph_gateway.xml
+++ b/l10n/ses/de-de/xml/admin_ceph_gateway.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="admin_ceph_gateway.xml" version="5.0" xml:id="cha-ceph-gw">
  
  <title>Ceph Object Gateway</title>
@@ -2149,7 +2149,7 @@ number_of_objects_expected_in_a_bucket / 100000
     </para>
 <screen><prompt>cephuser@adm &gt; </prompt>radosgw-admin realm create --rgw-realm=gold --default</screen>
     <para>
-     Wenn der Cluster einen einzigen Bereich umfasst, geben Sie das Flag <option>--default</option> an. Wenn <option>--default</option> angegeben wird, verwendet <command>radosgw-admin</command> standardmäßig diesen Bereich. Wenn <option>--default</option> nicht angegeben ist, muss beim Hinzufügen von Zonengruppen und Zonen entweder das Flag <option>--rgw-realm</option> oder das Flag <option>--realm-id</option> angegeben werden, um den Bereich zu identifizieren.
+     Wenn der Cluster einen einzigen Bereich umfasst, geben Sie das Flag <option>--default</option> an. Wenn <option>&#x2011;&#x2011;default</option> angegeben wird, verwendet <command>radosgw-admin</command> standardmäßig diesen Bereich. Wenn <option>&#x2011;&#x2011;default</option> nicht angegeben ist, muss beim Hinzufügen von Zonengruppen und Zonen entweder das Flag <option>--rgw-realm</option> oder das Flag <option>--realm-id</option> angegeben werden, um den Bereich zu identifizieren.
     </para>
     <para>
      Nach dem Erstellen des Bereichs gibt <command>radosgw-admin</command> die Bereichskonfiguration zurück:
