--- a/l10n/ses/de-de/xml/admin_ceph_iscsi.xml
+++ b/l10n/ses/de-de/xml/admin_ceph_iscsi.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="admin_ceph_iscsi.xml" version="5.0" xml:id="cha-ceph-iscsi">
  <title>Ceph iSCSI Gateway</title>
  <info>
@@ -263,7 +263,7 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
       </mediaobject>
      </figure>
      <para>
-      Die standardmäßige <guimenu>Load Balance policy</guimenu> (Lastausgleichrichtlinie) ist <guimenu>Round Robin With Subset</guimenu> (Round-Robin mit Teilmenge). Wenn Sie eine reine Failover-Konfiguration bevorzugen, ändern Sie die Einstellung zu <guimenu>Nur Failover</guimenu>.
+      Die standardmäßige <guimenu>Lastausgleichrichtlinie</guimenu> ist <guimenu>Round-Robin mit Teilmenge</guimenu>. Wenn Sie eine reine Failover-Konfiguration bevorzugen, ändern Sie die Einstellung zu <guimenu>Nur Failover</guimenu>.
      </para>
     </step>
    </procedure>
