--- a/l10n/ses/de-de/xml/admin_cephx.xml
+++ b/l10n/ses/de-de/xml/admin_cephx.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="admin_cephx.xml" version="5.0" xml:id="cha-storage-cephx">
  <title>Authentifizierung mit <systemitem class="service">cephx</systemitem></title>
  <info>
@@ -554,7 +554,7 @@ exported keyring for client.admin
      <term><option>--id</option> oder <option>--user</option></term>
      <listitem>
       <para>
-       Ceph kennzeichnet Benutzer mit einem Typ und einer ID (<replaceable>TYPE</replaceable>.<replaceable>ID</replaceable>, wie <systemitem class="username">client.admin</systemitem> oder <systemitem class="username">client.user1</systemitem>). Mit den Optionen <option>id</option>, <option>name</option> und <option>-n</option> geben Sie den ID-Teil des Benutzernamens an (beispielsweise <systemitem class="username">admin</systemitem> oder <systemitem class="username">user1</systemitem>). Sie können den Benutzer mit --id angeben und den Typ auslassen. Geben Sie beispielsweise zum Angeben des Benutzers „client.foo“ Folgendes ein:
+       Ceph kennzeichnet Benutzer mit einem Typ und einer ID (<replaceable>TYPE</replaceable>.<replaceable>ID</replaceable>, wie <systemitem class="username">client.admin</systemitem> oder <systemitem class="username">client.user1</systemitem>). Mit den Optionen <option>id</option>, <option>name</option> und <option>-n</option> geben Sie den ID-Teil des Benutzernamens an (beispielsweise <systemitem class="username">admin</systemitem> oder <systemitem class="username">user1</systemitem>). Sie können den Benutzer mit &#x2011;&#x2011;id angeben und den Typ auslassen. Geben Sie beispielsweise zum Angeben des Benutzers „client.foo“ Folgendes ein:
       </para>
 <screen><prompt>cephuser@adm &gt; </prompt>ceph --id foo --keyring /path/to/keyring health
 <prompt>cephuser@adm &gt; </prompt>ceph --user foo --keyring /path/to/keyring health</screen>
