--- a/l10n/ses/de-de/xml/admin_saltcluster.xml
+++ b/l10n/ses/de-de/xml/admin_saltcluster.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="admin_saltcluster.xml" version="5.0" xml:id="storage-salt-cluster">
  <title>Betriebsaufgaben</title>
  <info>
@@ -61,7 +61,7 @@
 <prompt>root@master # </prompt>ceph-salt config /ceph_cluster/roles/cephadm add ses-min5.example.com
 </screen>
     <para>
-     Weitere Informationen finden Sie unter <xref linkend="deploy-cephadm-configure-minions"/>.
+     Weitere Informationen finden Sie im <xref linkend="deploy-cephadm-configure-minions"/>.
     </para>
    </step>
    <step>
