--- a/l10n/ses/de-de/xml/dashboard_ganesha.xml
+++ b/l10n/ses/de-de/xml/dashboard_ganesha.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="dashboard_ganesha.xml" version="5.0" xml:id="dash-webui-nfs">
  <title>Verwalten von NFS Ganesha</title>
  <info>
@@ -135,7 +135,7 @@
    <title>Bearbeiten eines NFS-Exports</title>
    <mediaobject>
     <imageobject role="fo">
-     <imagedata fileref="oa_nfs_edit.png" width="100%" format="PNG"/>
+     <imagedata fileref="oa_nfs_edit.png" width="70%" format="PNG"/>
     </imageobject>
     <imageobject role="html">
      <imagedata fileref="oa_nfs_edit.png" width="100%" format="PNG"/>
