--- a/l10n/ses/de-de/xml/dashboard_ogws.xml
+++ b/l10n/ses/de-de/xml/dashboard_ogws.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="dashboard_ogws.xml" version="5.0" xml:id="dashboard-ogw">
  <title>Verwalten des Object Gateways</title>
  <info>
@@ -81,7 +81,7 @@ Please consult the documentation on how to configure and enable the Object Gatew
     <title>Hinzufügen eines neuen Gateway-Benutzers</title>
     <mediaobject>
      <imageobject role="fo">
-      <imagedata fileref="dash_ogw_user_add.png" width="100%" format="PNG"/>
+      <imagedata fileref="dash_ogw_user_add.png" width="80%" format="PNG"/>
      </imageobject>
      <imageobject role="html">
       <imagedata fileref="dash_ogw_user_add.png" width="100%" format="PNG"/>
