--- a/l10n/ses/de-de/xml/admin_operating_monitor.xml
+++ b/l10n/ses/de-de/xml/admin_operating_monitor.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="admin_operating_monitor.xml" version="5.0" xml:id="ceph-monitor">
  <title>Ermitteln des Clusterzustands</title>
  <info>
@@ -144,7 +144,7 @@ cluster:
   </itemizedlist>
 
   <para>
-   Sollen die Angaben in Echtzeit aktualisiert werden, geben Sie diese Kommandos (auch <command>ceph -s</command>) als Argument für das Kommando <command>watch</command> an:
+   Sollen die Angaben in Echtzeit aktualisiert werden, geben Sie diese Kommandos (auch <command>ceph&#xA0;&#x2011;s</command>) als Argument für das Kommando <command>watch</command> an:
   </para>
 
 <screen><prompt role="root"># </prompt>watch -n 10 'ceph -s'</screen>
