DE Deployment, DTP2 edits - QA and LSO implemented

--- a/l10n/ses/de-de/xml/upgrade-to-pacific.xml
+++ b/l10n/ses/de-de/xml/upgrade-to-pacific.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="upgrade-to-pacific.xml" version="5.0" xml:id="upgrade-to-pacific">
  <title>Upgrade von SUSE Enterprise Storage 7 auf 7.1</title>
  <info>
@@ -177,7 +177,7 @@
   <title>Aktualisieren von SUSE Enterprise Storage-Paketen auf den Cluster-Knoten</title>
 
   <para>
-   Zum Aktualisieren der SUSE Enterprise Storage-Pakete auf die neueste Version verwenden Sie das Kommando <command>ceph-salt update</command>. Weitere Einzelheiten finden Sie unter <xref linkend="cephadm-rolling-updates"/>.
+   Zum Aktualisieren der SUSE Enterprise Storage-Pakete auf die neueste Version verwenden Sie das Kommando <command>ceph-salt update</command>. Weitere Einzelheiten finden Sie im <xref linkend="cephadm-rolling-updates"/>.
   </para>
  </sect1>
  <sect1 xml:id="upgrade-ses-services">
