FR Admin and Deployment, DTP2 edits - QA and LSO implemented

--- a/l10n/ses/fr-fr/xml/deploy_core.xml
+++ b/l10n/ses/fr-fr/xml/deploy_core.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="deploy_core.xml" version="5.0" xml:id="deploy-core">
  <info>
   <title>Déploiement des services essentiels restants à l&apos;aide de cephadm</title>
@@ -61,7 +61,7 @@ mon       1/0  5m ago     -    &lt;no spec&gt;  registry.example.com/[...]  5bf1
 </screen>
    <tip>
     <para>
-     Vous pouvez limiter la liste aux services d&apos;un noeud en particulier avec le paramètre facultatif <option>--host</option> et aux services d&apos;un type particulier avec le paramètre facultatif <option>--service-type</option>. Les types acceptables sont <literal>mon</literal>, <literal>osd</literal>, <literal>mgr</literal>, <literal>mds</literal> et <literal>rgw</literal>.
+     Vous pouvez limiter la liste aux services d&apos;un noeud en particulier avec le paramètre facultatif <option>&#x2011;&#x2011;host</option> et aux services d&apos;un type particulier avec le paramètre facultatif <option>&#x2011;&#x2011;service-type</option>. Les types acceptables sont <literal>mon</literal>, <literal>osd</literal>, <literal>mgr</literal>, <literal>mds</literal> et <literal>rgw</literal>.
     </para>
    </tip>
    <para>
