--- a/l10n/ses/fr-fr/xml/admin_ceph_datamgm.xml
+++ b/l10n/ses/fr-fr/xml/admin_ceph_datamgm.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="admin_ceph_datamgm.xml" version="5.0" xml:id="cha-storage-datamgm">
  <title>Gestion des données stockées</title>
  <info>
@@ -1286,7 +1286,7 @@ osdmap e13 pg 1.6c (1.6c) -&gt; up [1,0] acting [1,0]
    <tip>
     <title>test de la nouvelle carte CRUSH</title>
     <para>
-     Testez la nouvelle carte CRUSH ajustée à l&apos;aide de la commande <command>crushtool --test</command> et comparez avec l&apos;état avant l&apos;application de la nouvelle carte CRUSH. Les paramètres de commande suivants pourraient vous être utiles : <option>--show-statistics</option>, <option>--show-mappings</option>, <option>--show-bad-mappings</option>, <option>--show-utilization</option>, <option>--show-utilization-all</option>, <option>--show-choose-tries</option>
+     Testez la nouvelle carte CRUSH ajustée à l&apos;aide de la commande <command>crushtool &#x2011;&#x2011;test</command> et comparez avec l&apos;état avant l&apos;application de la nouvelle carte CRUSH. Les paramètres de commande suivants pourraient vous être utiles : <option>--show-statistics</option>, <option>--show-mappings</option>, <option>--show-bad-mappings</option>, <option>--show-utilization</option>, <option>&#x2011;&#x2011;show-utilization-all</option>, <option>--show-choose-tries</option>
     </para>
    </tip>
   </sect2>
