IT Admin and Deployment, DTP2 edits - QA and LSO implemented

--- a/l10n/ses/ja-jp/xml/admin_cephx.xml
+++ b/l10n/ses/ja-jp/xml/admin_cephx.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="admin_cephx.xml" version="5.0" xml:id="cha-storage-cephx">
  <title><systemitem class="service">cephx</systemitem>を使用した認証</title>
  <info>
@@ -399,7 +399,7 @@ exported keyring for client.admin
    <sect3 xml:id="cephx-modifying-user-capabilities">
     <title>ユーザのケーパビリティの変更</title>
     <para>
-     <command>ceph auth caps</command>コマンドを使用して、ユーザを指定してそのユーザのケーパビリティを変更できます。新しいケーパビリティを設定すると、現在のケーパビリティは上書きされます。現在のケーパビリティを表示するには、<command>ceph auth get <replaceable>USERTYPE</replaceable>.<replaceable>USERID</replaceable></command>.ケーパビリティを追加するには、次の形式を使用する際に既存のケーパビリティを指定する必要もあります。
+     <command>ceph auth caps</command>コマンドを使用して、ユーザを指定してそのユーザのケーパビリティを変更できます。新しいケーパビリティを設定すると、現在のケーパビリティは上書きされます。現在のケーパビリティを表示するには、<command>ceph auth get <replaceable>USERTYPE</replaceable>.<replaceable>USERID</replaceable></command>。ケーパビリティを追加するには、次の形式を使用する際に既存のケーパビリティを指定する必要もあります。
     </para>
 <screen><prompt>cephuser@adm &gt; </prompt>ceph auth caps <replaceable>USERTYPE</replaceable>.<replaceable>USERID</replaceable> <replaceable>daemon</replaceable> 'allow [r|w|x|*|...] \
      [pool=<replaceable>pool-name</replaceable>] [namespace=<replaceable>namespace-name</replaceable>]' [<replaceable>daemon</replaceable> 'allow [r|w|x|*|...] \
