--- a/l10n/ses/ja-jp/xml/admin_rbd.xml
+++ b/l10n/ses/ja-jp/xml/admin_rbd.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="admin_rbd.xml" version="5.0" xml:id="ceph-rbd">
  <title>RADOS Block Device</title>
  <info>
