PT-BR Admin and Deployment + ZHC Admin, DTP2 edits - QA and LSO implemented

--- a/l10n/ses/pt-br/xml/admin_ceph_datamgm.xml
+++ b/l10n/ses/pt-br/xml/admin_ceph_datamgm.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="admin_ceph_datamgm.xml" version="5.0" xml:id="cha-storage-datamgm">
  <title>Gerenciamento de dados armazenados</title>
  <info>
@@ -296,7 +296,7 @@ rule replicated_ruleset {
         Esse método marca cada dispositivo na subárvore com raiz em <replaceable>BUCKET_NAME</replaceable> com a classe de dispositivo especificada.
        </para>
        <para>
-        Normalmente, a <option>--set-subtree-class</option> é usada em conjunto com a opção <option>--reclassify-root</option> para garantir que todos os dispositivos nessa raiz sejam rotulados com a classe correta. No entanto, alguns desses dispositivos podem intencionalmente ter uma classe diferente e, portanto, você não deseja rotulá-los outra vez. Nesses casos, exclua a opção <option>--set-subtree-class</option>. Saiba que esse tipo de remapeamento não será perfeito, porque a regra anterior é distribuída pelos dispositivos das várias classes, mas as regras ajustadas serão mapeadas apenas para os dispositivos da classe especificada.
+        Normalmente, a <option>--set-subtree-class</option> é usada em conjunto com a opção <option>&#x2011;&#x2011;reclassify-root</option> para garantir que todos os dispositivos nessa raiz sejam rotulados com a classe correta. No entanto, alguns desses dispositivos podem intencionalmente ter uma classe diferente e, portanto, você não deseja rotulá-los outra vez. Nesses casos, exclua a opção <option>--set-subtree-class</option>. Saiba que esse tipo de remapeamento não será perfeito, porque a regra anterior é distribuída pelos dispositivos das várias classes, mas as regras ajustadas serão mapeadas apenas para os dispositivos da classe especificada.
        </para>
       </listitem>
      </varlistentry>
