--- a/l10n/ses/pt-br/xml/admin_ceph_gateway.xml
+++ b/l10n/ses/pt-br/xml/admin_ceph_gateway.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="admin_ceph_gateway.xml" version="5.0" xml:id="cha-ceph-gw">
  
  <title>Gateway de Objetos do Ceph</title>
@@ -2175,7 +2175,7 @@ number_of_objects_expected_in_a_bucket / 100000
 <screen><prompt>cephuser@adm &gt; </prompt>radosgw-admin zonegroup create --rgw-zonegroup=us \
 --endpoints=http://rgw1:80 --master --default</screen>
     <para>
-     Se o domínio tiver apenas um grupo de zonas, especifique o flag <option>--default</option>. Se <option>--default</option> for especificado, <command>radosgw-admin</command> usará esse grupo de zonas por padrão ao adicionar novas zonas. Se <option>--default</option> não for especificado, a adição de zonas exigirá o flag <option>--rgw-zonegroup</option> ou <option>--zonegroup-id</option> para identificar o grupo de zonas ao adicionar ou modificar zonas.
+     Se o domínio tiver apenas um grupo de zonas, especifique o flag <option>--default</option>. Se <option>--default</option> for especificado, <command>radosgw-admin</command> usará esse grupo de zonas por padrão ao adicionar novas zonas. Se <option>--default</option> não for especificado, a adição de zonas exigirá o flag <option>--rgw-zonegroup</option> ou <option>&#x2011;&#x2011;zonegroup-id</option> para identificar o grupo de zonas ao adicionar ou modificar zonas.
     </para>
     <para>
      Após criar o grupo de zonas master, <command>radosgw-admin</command> retornará a configuração do grupo de zonas. Por exemplo:
