--- a/l10n/ses/pt-br/xml/deploy_bootstrap.xml
+++ b/l10n/ses/pt-br/xml/deploy_bootstrap.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="deploy_bootstrap.xml" version="5.0" xml:id="deploy-bootstrap">
  <info>
   <title>Implantando o cluster de boot usando <systemitem class="resource">ceph-salt</systemitem></title>
@@ -763,7 +763,7 @@ skopeo sync --src docker --dest dir registry.suse.com/ses/7.1/ceph/prometheus-al
     </para>
    </note>
    <para>
-    Para <emphasis>forçar o modo</emphasis> <literal>secure</literal>, execute os seguintes comandos:
+    Para <emphasis>forçar</emphasis> o modo <literal>secure</literal>, execute os seguintes comandos:
    </para>
 <screen><prompt>root@master # </prompt>ceph-salt config /cephadm_bootstrap/ceph_conf/global set ms_cluster_mode secure
 <prompt>root@master # </prompt>ceph-salt config /cephadm_bootstrap/ceph_conf/global set ms_service_mode secure
