--- a/l10n/ses/pt-br/xml/deploy_core.xml
+++ b/l10n/ses/pt-br/xml/deploy_core.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="deploy_core.xml" version="5.0" xml:id="deploy-core">
  <info>
   <title>Implantando os serviços principais restantes com o cephadm</title>
@@ -61,7 +61,7 @@ mon       1/0  5m ago     -    &lt;no spec&gt;  registry.example.com/[...]  5bf1
 </screen>
    <tip>
     <para>
-     Você pode limitar a lista a serviços em um nó específico com o parâmetro opcional <option>--host</option> e a serviços de um determinado tipo com o parâmetro opcional <option>--service-type</option>. Os tipos aceitáveis são <literal>mon</literal>, <literal>osd</literal>, <literal>mgr</literal>, <literal>mds</literal> e <literal>rgw</literal>.
+     Você pode limitar a lista a serviços em um nó específico com o parâmetro opcional <option>&#x2011;&#x2011;host</option> e a serviços de um determinado tipo com o parâmetro opcional <option>--service-type</option>. Os tipos aceitáveis são <literal>mon</literal>, <literal>osd</literal>, <literal>mgr</literal>, <literal>mds</literal> e <literal>rgw</literal>.
     </para>
    </tip>
    <para>
