--- a/l10n/ses/pt-br/xml/upgrade-to-pacific.xml
+++ b/l10n/ses/pt-br/xml/upgrade-to-pacific.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="upgrade-to-pacific.xml" version="5.0" xml:id="upgrade-to-pacific">
  <title>Upgrade do SUSE Enterprise Storage 7 para 7.1</title>
  <info>
@@ -177,7 +177,7 @@
   <title>Atualizar os pacotes relacionados ao SUSE Enterprise Storage em cada nó do cluster</title>
 
   <para>
-   Para atualizar os pacotes do SUSE Enterprise Storage para a versão mais recente, use o comando <command>ceph-salt update</command>. Para obter mais detalhes, visite <xref linkend="cephadm-rolling-updates"/>.
+   Para atualizar os pacotes do SUSE Enterprise Storage para a versão mais recente, use o comando <command>ceph-salt update</command>. Para obter mais detalhes, visite o <xref linkend="cephadm-rolling-updates"/>.
   </para>
  </sect1>
  <sect1 xml:id="upgrade-ses-services">
