ZHC Admin and Deployment, DTP2 edits - QA and LSO implemented

--- a/l10n/ses/zh-cn/xml/admin_about.xml
+++ b/l10n/ses/zh-cn/xml/admin_about.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="admin_about.xml" version="5.0" xml:id="cha-storage-about">
  <title>SES 和 Ceph</title>
  <info>
@@ -114,7 +114,7 @@
     </varlistentry>
    </variablelist>
    <para>
-    <systemitem class="library">librados</systemitem> 由对象网关和 RBD 使用，而 CephFS 直接与 RADOS 连接。请参见<xref linkend="storage-intro-core-rados-figure"/>。
+    <systemitem class="library">librados</systemitem> 由对象网关和 RBD 使用，而 CephFS 直接与 RADOS 连接。请参见（<xref linkend="storage-intro-core-rados-figure"/>）。
    </para>
    <figure xml:id="storage-intro-core-rados-figure">
     <title>与 Ceph 对象存储连接</title>
