--- a/l10n/ses/zh-cn/xml/admin_ceph_upgrade.xml
+++ b/l10n/ses/zh-cn/xml/admin_ceph_upgrade.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="admin_ceph_upgrade.xml" version="5.0" xml:id="cha-ceph-upgrade">
  <title>从 SUSE Enterprise Storage 6 升级到版本 7.1</title>
  <info>
@@ -1060,7 +1060,7 @@ spec:
 </screen>
      <note>
       <para>
-       <option>pool</option>、<option>trusted_ip_list</option>、<option>api_port</option>、<option>api_user</option>、<option>api_password</option>、<option>api_secure</option> 设置与 <filename>/etc/ceph/iscsi-gateway.cfg</filename> 文件中的相应设置相同。可从现有 SSL 证书和密钥文件中复制 <option>ssl_cert</option> 和 <option>ssl_key</option> 值。确认这些值是否缩进正确，并且 <literal>ssl_cert:</literal> 和 <literal>ssl_key:</literal> 行的末尾是否显示有<emphasis>竖线</emphasis>字符 <literal>|</literal>（请参见上述 <filename>iscsi.yml</filename> 文件的内容）。
+       <option>pool</option>、<option>trusted_ip_list</option>、<option>api_port</option>、<option>api_user</option>、<option>api_password</option>、&#x200b;<option>api_secure</option> 设置与 <filename>/etc/ceph/iscsi-gateway.cfg</filename> 文件中的相应设置相同。可从现有 SSL 证书和密钥文件中复制 <option>ssl_cert</option> 和 <option>ssl_key</option> 值。确认这些值是否缩进正确，并且 <literal>ssl_cert:</literal> 和 <literal>ssl_key:</literal> 行的末尾是否显示有<emphasis>竖线</emphasis>字符 <literal>|</literal>（请参见上述 <filename>iscsi.yml</filename> 文件的内容）。
       </para>
      </note>
     </step>
