--- a/l10n/ses/zh-cn/xml/admin_rbd.xml
+++ b/l10n/ses/zh-cn/xml/admin_rbd.xml
@@ -914,7 +914,7 @@ Peers:
    <sect3 xml:id="rbd-enable-image-jouranling">
     <title>启用映像日志功能</title>
     <para>
-     RBD 镜像使用 RBD 日志功能来确保复制的映像始终在崩溃时保持一致状态。使用 <literal>image</literal> 镜像模式时，如果在映像上启用了镜像，则将自动启用日志功能。使用 <literal>pool</literal> 镜像模式时，必须先启用 RBD 映像日志功能，然后才能将映像镜像到对等集群。在创建映像时，可以通过将 <option>&#x2011;&#x2011;image-feature exclusive-lock,journaling</option> 选项提供给 <command>rbd</command> 命令来启用该功能。
+     RBD 镜像使用 RBD 日志功能来确保复制的映像始终在崩溃时保持一致状态。使用 <literal>image</literal> 镜像模式时，如果在映像上启用了镜像，则将自动启用日志功能。使用 <literal>pool</literal> 镜像模式时，必须先启用 RBD 映像日志功能，然后才能将映像镜像到对等集群。在创建映像时，可以通过将 <option>--image-feature exclusive-lock,journaling</option> 选项提供给 <command>rbd</command> 命令来启用该功能。
     </para>
     <para>
      或者，日志功能可以针对预先存在的 RBD 映像动态启用。要启用日志，请指定 <command>feature enable</command> 子命令、存储池和映像名称以及功能名称：
@@ -963,7 +963,7 @@ Peers:
      要使用 <command>rbd</command> 删除镜像快照日程安排，请指定 <command>mirror snapshot schedule remove</command> 命令以及与相应的添加日程安排命令相匹配的选项。
     </para>
     <para>
-     要使用 <command>rbd</command> 列出特定级别（全局、存储池或映像）的所有快照日程安排，请指定 <command>mirror snapshot schedule ls</command> 命令以及可选的存储池或映像名称。此外，还可以指定 <option>&#x2011;&#x2011;recursive</option> 选项，以列出指定及以下级别的所有日程安排。例如：
+     要使用 <command>rbd</command> 列出特定级别（全局、存储池或映像）的所有快照日程安排，请指定 <command>mirror snapshot schedule ls</command> 命令以及可选的存储池或映像名称。此外，还可以指定 <option>--recursive</option> 选项，以列出指定及以下级别的所有日程安排。例如：
     </para>
 <screen><prompt>cephuser@adm &gt; </prompt>rbd --cluster local mirror schedule ls --pool image-pool --recursive
 POOL        NAMESPACE IMAGE  SCHEDULE
