--- a/l10n/ses/zh-cn/xml/admin_ceph_datamgm.xml
+++ b/l10n/ses/zh-cn/xml/admin_ceph_datamgm.xml
@@ -1286,7 +1286,7 @@ osdmap e13 pg 1.6c (1.6c) -&gt; up [1,0] acting [1,0]
    <tip>
     <title>测试新 CRUSH 索引</title>
     <para>
-     请使用 <command>crushtool --test</command> 命令测试经过调整的新 CRUSH 索引，并与应用新 CRUSH 索引之前的状态进行比较。以下命令开关十分有用：<option>--show-statistics</option>、<option>&#x2011;&#x2011;show-mappings</option>、<option>--show-bad-mappings</option>、<option>--show-utilization</option>、<option>--show-utilization-all</option>、<option>--show-choose-tries</option>
+     请使用 <command>crushtool --test</command> 命令测试经过调整的新 CRUSH 索引，并与应用新 CRUSH 索引之前的状态进行比较。以下命令开关十分有用：<option>--show-statistics</option>、<option>--show-mappings</option>、<option>--show-bad-mappings</option>、<option>--show-utilization</option>、<option>--show-utilization-all</option>、<option>--show-choose-tries</option>
     </para>
    </tip>
   </sect2>
