--- a/l10n/ses/zh-tw/xml/common_copyright_cc.xml
+++ b/l10n/ses/zh-tw/xml/common_copyright_cc.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <?xml-stylesheet href="urn:x-suse:xslt:profiling:docbook51-profile.xsl"
  type="text/xml"
  title="Profiling step"?>
@@ -17,7 +17,7 @@
   除非另有說明，否則本文件依據創用 CC 姓名標示-相同方式分享 4.0 國際 (Creative Commons Attribution-ShareAlike 4.0 International, CC-BY-SA 4.0) 獲得授權：<link xlink:href="https://creativecommons.org/licenses/by-sa/4.0/legalcode"/>。
  </para>
  <para>
-  如需 SUSE 商標，請參閱 <link xlink:href="http://www.suse.com/company/legal/"/>。所有的協力廠商商標均為其各別擁有廠商的財產。商標符號 (®、™ 等) 表示 SUSE 及其關係企業的商標。星號 (*) 表示協力廠商的商標。
+  如需 SUSE 商標，請參閱 <link xlink:href="http://www.suse.com/company/legal/"/>。所有的協力廠商商標均為其各別擁有廠商的財產。商標符號 (®、<phrase>™</phrase> 等) 表示 SUSE 及其關係企業的商標。星號 (*) 表示協力廠商的商標。
  </para>
  <para>
   本手冊中所有資訊在編輯時，都已全力注意各項細節。但這不保證百分之百的正確性。因此，SUSE LLC 及其關係企業、作者或譯者都不需對任何錯誤或造成的結果負責。
